deployement_strategy/canary/canary-new.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: canary-new
  namespace: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
      version: v1
  template:
    metadata:
      labels:
        app: nginx
        version: v1
    spec:
      containers:
      - name: canary-new-container
        image: amitabhdevops/online_shop_without_footer
        ports:
        - containerPort: 3000
        resources:
          limits:
            cpu: 500m
            memory: 512Mi
          requests:
            cpu: 200m
            memory: 256Mi
