deployement_strategy/canary/canary-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: canary-service
  namespace: nginx
spec:
  selector:
    app: nginx
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
  type: ClusterIP
