deployement_strategy/canary/ingress.yml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: ingress
  namespace: nginx
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: canary-service
            port:
              number: 80
